// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleResult renders correctly when not valid 1`] = `
<Fragment>
  <p
    className="Validity"
  >
    <span
      className="IconWrapper"
    >
      <Warning
        className="invalidIcon"
        size={27}
      />
    </span>
    <strong
      className="email"
    >
       
      test@fail.com
    </strong>
    <span>
       is NOT a valid recipient. invalid domain.
    </span>
  </p>
</Fragment>
`;

exports[`SingleResult renders correctly when valid 1`] = `
<Fragment>
  <p
    className="Validity"
  >
    <span
      className="IconWrapper"
    >
      <CheckCircleOutline
        className="validIcon"
        size={27}
      />
    </span>
    <strong
      className="email"
    >
       
      test@test.com
    </strong>
    <span>
       is a valid recipient.
    </span>
  </p>
</Fragment>
`;
